<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewModels.ShoeDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/shoe_name_tv"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/guideline_Top" />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintBaseline_toBottomOf="@id/shoe_name_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right" />

        <TextView
            android:id="@+id/shoe_company_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/shoe_company_tv"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_tv" />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintBaseline_toBottomOf="@id/shoe_company_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right" />

        <TextView
            android:id="@+id/shoe_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/shoe_size_tv"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_tv" />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintBaseline_toBottomOf="@id/shoe_size_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right" />

        <TextView
            android:id="@+id/shoe_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/shoe_description_tv"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_tv" />

        <EditText
            style="@style/editTextStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@={viewModel.shoeDesc}"
            app:layout_constraintBaseline_toBottomOf="@id/shoe_description_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/triple_margin"
            android:background="@drawable/button_drawable"
            android:text="@string/cancel"
            android:textColor="@color/thirdColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_tv" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:text="@string/save"
            android:textColor="@color/thirdColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="@id/guideline_right" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_Top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_Bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>